--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
     <img src="./assets/showcase.jpg" />
     <div class="box">
       <h1>Quality, Quantity, Produce.</h1>
-      <P>we have One of the largest cashew farms in nigeria.</P>
-      <a href="about.html" class="btn">About Us</a>
+      <P>we are one of the largest cashew farms in nigeria.</P>
+      <a href="about.html" class="btn">about us</a>
     </div>
   </div>
 
   <div class="main-container">
     <div class="card">
-      <div>
+      <div class="text">
         <h2>The Cahew Fruit</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat nemo similique optio nostrum mollitia sed,
           earum maiores doloribus dolorem possimus sit voluptatem nihil saepe, modi molestias consectetur aspernatur
@@ -54,7 +54,7 @@
 
     <div class="card">
       <img src="./assets/show.jpg" />
-      <div>
+      <div class="text">
         <h2>Oranges</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat nemo similique optio nostrum mollitia sed,
           earum maiores doloribus dolorem possimus sit voluptatem nihil saepe, modi molestias consectetur aspernatur
@@ -65,7 +65,7 @@
     </div>
 
     <div class="card">
-      <div>
+      <div class="text">
         <h2>Cashew Molases</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam veritatis accusantium reprehenderit
           cupiditate porro repellat dicta quas dolore. Rem omnis voluptatibus, vel aut iusto, provident voluptas earum
@@ -78,7 +78,7 @@
     </div>
     <div class="card">
       <img src="./assets/Cashew.jpg" />
-      <div>
+      <div class="text">
         <h2>The Cahew Nut</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat nemo similique optio nostrum mollitia sed,
           earum maiores doloribus dolorem possimus sit voluptatem nihil saepe, modi molestias consectetur aspernatur
