make content in test responsive

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <img src="./assets/showcase.jpg" />
     <div class="box">
       <h1>Quality, Quantity, Produce.</h1>
-      <P>we are one of the largest cashew farms in nigeria.</P>
-      <a href="about.html" class="btn">about us</a>
+      <P>we are one of the largest<br/> cashew farms in nigeria.</P>
+      <!-- <a href="about.html" class="btn">about us</a> -->
     </div>
   </div>
 
@@ -47,13 +47,13 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat nemo similique optio nostrum mollitia sed,
           earum maiores doloribus dolorem possimus sit voluptatem nihil saepe, modi molestias consectetur aspernatur
           adipisci magni!</p>
-        <a class="learn-more btn" href="#">Learn More</a>
+        <a class="learn-more" href="#">Learn More</a>
       </div>
       <img src="./assets/cashew-seed.jpg" />
     </div>
 
     <div class="card">
-      <img src="./assets/show.jpg" />
+      <img src="./assets/oranges.jpg" />
       <div class="text">
         <h2>Oranges</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat nemo similique optio nostrum mollitia sed,
@@ -77,7 +77,7 @@
       <img src="./assets/agric2.png" />
     </div>
     <div class="card">
-      <img src="./assets/Cashew.jpg" />
+      <img src="./assets/nuts.jpg" />
       <div class="text">
         <h2>The Cahew Nut</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat nemo similique optio nostrum mollitia sed,
