touch up the ui element

--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>About</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
   <link href="about.css" rel="stylesheet" />
 </head>
 
@@ -20,9 +22,9 @@
       </div>
       <ul class="navbar-nav">
         <li><a href="about.html">About Us</a></li>
-        <li><a href="value.html">Our Value</a></li>
+        <!-- <li><a href="our-value.html">Our Value</a></li> -->
         <li><a href="contact.html">Contact Us</a></li>
-        <li><a href="blog.html">Blog</a></li>
+        <li><a href="dealer.html">Become a Dealer</a></li>
         <li><a href="index.html">Home</a></li>
       </ul>
       </div>
@@ -32,9 +34,9 @@
       <a href="#" class="btn-close" onclick="closeSlideMenu()"> &times;</a>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About Us</a></li>
-      <li><a href="value.html">Our Value</a></li>
+      <!-- <li><a href="our-value.html">Our Value</a></li> -->
       <li><a href="contact.html">Contact Us</a></li>
-      <li><a href="blog.html">Blog</a></li>
+      <li><a href="dealer.html">Become a Dealer</a></li>
     </div>
   </header>
   <main>
@@ -42,40 +44,53 @@
       <p>About</p>
     </div>
     <div class="body">
-      <!-- <h2>Who We are</h2> -->
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor aliquid, fugit adipisci similique
-        molestiae placeat dolores error accusamus eum porro magnam eaque, animi aliquam libero commodi non. Architecto,
-        nihil eius similique ipsa consequuntur reiciendis sapiente optio, totam rem, necessitatibus ex impedit corrupti
-        tempora aliquam. Saepe culpa molestias quia animi laudantium reiciendis, quaerat impedit quidem, debitis quasi
-        exercitationem. Est, unde nemo hic soluta, debitis cum sit saepe sint dignissimos dolor vel nostrum nisi
-        repudiandae nesciunt, quas velit? Distinctio eum est assumenda recusandae facere magni non natus, quas
-        blanditiis
-        odio illum voluptatum repudiandae dolor nostrum veritatis? Laborum sequi praesentium laudantium officiis,
-        adipisci, reiciendis commodi repudiandae repellat, expedita doloremque quibusdam magnam ratione quia explicabo.
-        Explicabo dolore nulla maiores libero ratione consequuntur eum possimus hic quod adipisci? Quasi sequi esse
-        placeat, dolorem et officiis quae necessitatibus aspernatur quos ipsam harum! In ad repellat quaerat ab
-        voluptatum, illo aliquid fuga quisquam itaque velit facilis atque, molestiae voluptatibus consequuntur excepturi
-        eius dicta id dolorum exercitationem nesciunt dolorem reprehenderit delectus nulla? Ea, temporibus repudiandae
-        provident quasi facere ducimus at nostrum deserunt deleniti, est quia eos eveniet molestiae maxime minima
-        obcaecati placeat vel odio? In quos, vero nam blanditiis, doloremque debitis at saepe veniam molestias doloribus
-        similique ut.
-      </p>
-      <h2>Disclaimer</h2>
-      <p class="disclaimer">THIS SITE/DOCUMENT DOES NOT PROVIDE MEDICAL OR HEALTH CARE ADVICE. CONSULT YOUR PHYSICIAN OR
-        OTHER QUALIFIED
-        HEALTH CARE PROVIDER FOR ADVICE REGARDING ANY MEDICAL CONDITION. DO NOT ATTEMPT TO SELF-DIAGNOSE OR TREAT ANY
-        MEDICAL CONDITION BASED ON ANYTHING CONTAINED THEREIN.
-      </p>
+      <h2>Who we are</h2>
+      <p>Our main product base is Cashew nuts and everything cashew - and there is a lot with the fruit than just the
+        apple and the nuts.
+        For the past 17 years, we've supplied local processors who unshelled the nut for international market.
+
+        <p>The Cashew Juice Honey Molasé is our first manufactured product from Kwara State. We have other products
+          pending
+          NAFDAC approval.
+
+          Hoping to introduce the freshly squeezed Cashew Juice early next year.
+
+          The Cashew Wine and Brandy will follow thereafter under our registered Trademark.
+
+          Our super big Banana plantain are likely ready for market later this year or early 2019.</p>
+
+        <p>These are long time ideas that are just now manifesting after some summersult due to the peculiar business
+          environment. Plans are in place to continue to create employment for our massive youths who are ready to work.
+          90% of our
+          team are bright fellows.
+          And we thank you for your continued support.
+          <p>St. Jude Farms & Produce NIg Ltd is a subsidiary of St. Jude Investment Company Ltd.</p>
+
+        </p>
+        <h2>Our Value</h2>
+        <p> 
+          Cashews are cash crops, harvested mainly for its nut, the so-called cashew apple, is usually thrown away or
+          left to rot as a by-product of the harvest.
+          Statistics also shows that Africa produces 57 percent of the world’s favorite kidney-shaped snack, but 90 percent of the crop is
+          exported raw and processed elsewhere, creating jobs and wealth that should be staying in Africa.</p>
+          <p>Here at St. Jude Farms, we are changing this narrative, We beleive there’s  alot of opportunity from agricultural waste.
+            Oppotunity to create jobs for the teeaming youth, the Oppotunity to turn waste to wealth.
+            This is at the core of what we do at St. Jude Farms, that is what drives us continually, as we put seed in the ground to the time for harvest.  
+          </p>
+        <h2>Disclaimer</h2>
+        <p class="disclaimer" id="disclaimer">THIS SITE/DOCUMENT DOES NOT PROVIDE MEDICAL OR HEALTH CARE ADVICE. CONSULT YOUR PHYSICIAN
+          OR
+          OTHER QUALIFIED
+          HEALTH CARE PROVIDER FOR ADVICE REGARDING ANY MEDICAL CONDITION. DO NOT ATTEMPT TO SELF-DIAGNOSE OR TREAT ANY
+          MEDICAL CONDITION BASED ON ANYTHING CONTAINED THEREIN.
+        </p>
     </div>
   </main>
 
-  <footer class="footer">     
+  <footer class="footer">
     <div class="fcontainer">
-        
+
       <div class="one">
-           <!-- <<div class="footer-logo">
-              <img class="f-logo" src="./assets/logo.png" /> ><p>St. Jude <br/>Farms</p>
-            </div>  -->
         <h3>HELP AND SUPPORT</h3>
         <p>
           <i class="far fa-clock fa-1x"></i> Mon-Fri: 8am-5pm <br /><span class="pad">Sat: 10am-5pm</span>
@@ -83,6 +98,7 @@
         <i class="fas fa-phone fa-1x"></i> +2348162511023<br /><span class="pad">
           +2348067892221</span>
       </div>
+
       <div class="two">
         <h3>MORE INFO</h3>
         <ul>
@@ -92,6 +108,7 @@
           <li><a href="dealer.html">Become a Dealer</a></li>
         </ul>
       </div>
+
       <div class="three">
         <h3>ST.JUDE FARMS</h3>
         <ul>
@@ -101,6 +118,7 @@
           <li><a href="#">Blog</a></li>
         </ul>
       </div>
+
       <div class="social">
         <h3>SOCIAL MEDIA</h3>
         <p>
