--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
     integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald&display=swap" rel="stylesheet" />
   <link href="./style.css" rel="stylesheet" />
   <title>St Jude Farms</title>
 </head>
@@ -25,22 +25,18 @@
       </div>
       <ul class="navbar-nav">
         <li><a href="about.html">About Us</a></li>
-        <li><a href="value.html">Our Value</a></li>
         <li><a href="contact.html">Contact Us</a></li>
-        <li><a href="blog.html">Blog</a></li>
+        <li><a href="dealer.html">Become a Dealer</a></li>
         <li><a href="index.html">Home</a></li>
-
       </ul>
-      </div>
     </nav>
 
     <div id="side-menu" class="side-nav">
       <a href="#" class="btn-close" onclick="closeSlideMenu()"> &times;</a>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About Us</a></li>
-      <li><a href="value.html">Our Value</a></li>
       <li><a href="contact.html">Contact Us</a></li>
-      <li><a href="blog.html">Blog</a></li>
+      <li><a href="dealer.html">Become a Dealer</a></li>
     </div>
   </header>
 
@@ -51,97 +47,137 @@
         <P>we are one of the largest cashew <br />farms in nigeria.</P>
       </div>
       <div class="direction" onclick="seeProduce()">
-          <i class="fas fa-angle-double-down fa-3x bounce"></i>
-        <p >Checkout our Produce</p>
+        <i class="fas fa-angle-double-down fa-3x bounce"></i>
+        <p>Checkout our Produce</p>
       </div>
     </div>
+  </div>
+  <div class="container">
+    <div class="first-card">
+      <div>
+        <div class="card-bg">
+          <p class="on-image">Visit Us</p>
+        </div>
+        <p class="description">Come visit us at St. Jude farms and see where it is all taking place.</p>
+        <a class="btn1 learn-more" href="#">Visit JDR Farm </a>
+      </div>
+      <div>
+        <div class="card-bg card-bg2">
+          <p class="on-image">cashew molases</p>
+        </div>
+        <p class="description">Shop our most popular cashew juice molases online or find us locally.</p>
+        <a class="btn1 learn-more" href="#">Buy</a>
+      </div>
+      <div>
+        <div class="card-bg card-bg3">
+          <p class="on-image">About jdr</p>
 
+        </div>
+        <p class="description">Our quest to create high quality farm produce is rooted in our value</p>
+        <a class="btn1 learn-more" href="about.html">Our Story</a>
+      </div>
+
+    </div>
   </div>
 
   <main class="main-container">
-    <section class="card" data-aos="fade-up">
+      <section class="card" data-aos="fade-up">
+          <div class="text">
+            <h2>Cashew Honey Molases</h2>
+            <p>
+              World’s favorite kidney-shaped fruit
+            </p>
+            <a class="btn learn-more" href="molase.html">Learn More</a>
+          </div>
+          <img src="./assets/molases.jpg" />
+        </section>
+    
+
+    <section class="card" data-aos="fade-left">
       <div class="text">
-        <h2>Cahew Fruit</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat nemo similique optio nostrum mollitia sed,
-          earum maiores doloribus dolorem possimus sit voluptatem nihil saepe, modi molestias consectetur aspernatur
-          adipisci magni!</p>
-        <a class="learn-more" href="#">Learn More</a>
+        <h2>Cashew Fruit</h2>
+        <p>
+          World’s favorite kidney-shaped fruit, l
+        </p>
+        <a class="btn learn-more" href="fruit.html">Learn More</a>
       </div>
-      <img src="./assets/cashew-seed.jpg" />
+      <img src="./assets/fruit.jpg" />
     </section>
 
     <section class="card" data-aos="fade-right">
       <div class="text">
         <h2>Oranges</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat nemo similique optio nostrum mollitia sed,
-          earum maiores doloribus dolorem possimus sit vo</p>
-        <a class="learn-more btn" href="#">Learn More</a>
+        <p>
+          Our sweet orange is from the finest breed and will soon be ready to hit the market.  
+        </p>
+        <a class="learn-more btn" href="#">Coming Soon</a>
       </div>
-      <img src="./assets/oranges.jpg" />
+      <img src="./assets/osan.jpg" />
     </section>
 
     <section class="card" data-aos="fade-left">
       <div class="text">
         <h2>Plantain</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam veritatis accusantium officia ipsa.
-          Doloribus accusantium id minima natus expedita
-          .</p>
-        <a class="learn-more btn" href="#">Learn More</a>
+        <p>
+          Our super big Banana plantain are likely ready for market later this year or early next year.
+        </p>
+        <a class="btn learn-more " href="">Coming Soon</a>
       </div>
-      <img src="./assets/plantain.jpg" />
+      <img src="./assets/banana.jpg" />
     </section>
 
     <section class="card" data-aos="fade-up">
       <div class="text">
         <h2>Cahew Nuts</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat nemo similique optio nostrum mollitia sed,
-          modi molestias consectetur aspernatur
-          adipisci magni!</p>
-        <a class="learn-more btn" href="#">Learn More</a>
+        <p>
+          Cashew nuts are native to Brazil, where they have long been viewed as a delicacy. More recently, cashews have
+          become popular throughout the world for their delicate flavor and extraordinary health benefits.
+        </p>
+        <a class="btn learn-more" href="nuts.html">Learn More</a>
       </div>
       <span class="image">
-        <img src="./assets/Cashew.jpg" />
+        <img src="./assets/Cashew-2.jpg" />
       </span>
     </section>
-
   </main>
 
   <footer class="footer">
     <div class="fcontainer">
-
       <div class="one">
-        <!-- <<div class="footer-logo">
-              <img class="f-logo" src="./assets/logo.png" /> ><p>St. Jude <br/>Farms</p>
-            </div>  -->
         <h3>HELP AND SUPPORT</h3>
         <p>
           <i class="far fa-clock fa-1x"></i> Mon-Fri: 8am-5pm <br /><span class="pad">Sat: 10am-5pm</span>
-        </p><br />
-        <i class="fas fa-phone fa-1x"></i> +2348162511023<br /><span class="pad">
-          +2348067892221</span>
+        </p>
+        <br />
+        <i class="fas fa-phone fa-1x"></i> +2347064872678<br /><span class="pad">
+          +2348181584956</span>
       </div>
+
       <div class="two">
         <h3>MORE INFO</h3>
         <ul>
-          <li><a href="index.html">Privacy Statement</a></li>
-          <li><a href="contact.html">Terms & Conditions</a></li>
+          <li><a href="privacy.html">Privacy Statement</a></li>
+          <!-- <li><a href="about.html/#">Terms & Conditions</a></li> -->
           <li><a href="#">Career</a></li>
           <li><a href="dealer.html">Become a Dealer</a></li>
         </ul>
       </div>
+
       <div class="three">
         <h3>ST.JUDE FARMS</h3>
         <ul>
-          <li><a href="index.html">About Us</a></li>
+          <li><a href="about.html">About Us</a></li>
           <li><a href="contact.html">Contact Us</a></li>
-          <li><a href="safetips">Safe Buiying Tips</a></li>
-          <li><a href="#">Blog</a></li>
+          <!-- <li><a href="safetips">Safe Buiying Tips</a></li> -->
+          <!-- <li><a href="#">Blog</a></li> -->
         </ul>
       </div>
+
       <div class="social">
         <h3>SOCIAL MEDIA</h3>
         <p>
-          <a href="#"><i class="fab fa-facebook-square"></i> Facebook</a>
+          <a href="https://web.facebook.com/JDR-Cashew-Juice-Molasé-1254427848025351" target="_blank" rel="noopener noreferrer"><i
+              class="fab fa-facebook-square"></i> Facebook</a>
         </p>
         <p>
           <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
@@ -151,12 +187,13 @@
         </p>
       </div>
     </div>
-    <P class="copy"> &copy; 2019 Copyright. St. Jude Farms. Privacy Policy. Terms Of Use. Website design and development
-      by zion System.</P>
+    <P class="copy">
+      &copy; 2019 Copyright. St. Jude Farms. Privacy Policy. Terms Of Use.
+      Website design and development by zion System.</P>
   </footer>
+
   <script src="./index.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
   <script>
     AOS.init({
       offset: 250,
