--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+      integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+      crossorigin="anonymous"
+    />
+  <link href="./contact.css" rel="stylesheet" />
+  <title>Contact</title>
 </head>
+
 <body>
-    
+  <header class="head-container">
+    <nav class="heading">
+      <a href="index.html"><img class="logo" src="./assets/logo.png" /></a>
+      <div class="hamburger" onclick="openSlideMenu()">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>
+      <ul class="navbar-nav">
+        <li><a href="about.html">About Us</a></li>
+        <!-- <li><a href="our-value.html">Our Value</a></li> -->
+        <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="dealer.html">Become a Dealer</a></li>
+        <li><a href="index.html">Home</a></li>
+      </ul>
+      </div>
+    </nav>
+
+    <div id="side-menu" class="side-nav">
+      <a href="#" class="btn-close" onclick="closeSlideMenu()"> &times;</a>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <!-- <li><a href="our-value.html">Our Value</a></li> -->
+      <li><a href="contact.html">Contact Us</a></li>
+      <li><a href="dealer.html">Become a Dealer</a></li>
+    </div>
+  </header>
+  <section class="explain">
+    <h6>Got a question ?</h6>
+    <h1>Contact St. Jude's Farm</h1>
+    <p>We’re here to help and answer any question you might have. We look forward to hearing from you. </p>
+  </section>
+  <div class="container">
+    <div class="main-container">
+      <section class="contact-form">
+        <form class="form" action="mailto:someone@example.com" method="post" enctype="text/plain">
+          <div>
+            <label>
+              <p>Name <span class="red">*</span></p>
+            </label>
+            <input type="text" placeholder="First Name">
+
+          </div>
+          <div>
+            <label>
+              <p>Email <span class="red">*</span></p>
+            </label>
+            <input type="email" placeholder="Enter your Email">
+          </div>
+
+          <div>
+            <label>
+              <p>Message <span class="red">*</span></p>
+            </label>
+            <textarea placeholder="Input your message"></textarea> 
+          </div>
+          <input type="submit" value="Send Message" />
+
+        </form>
+        <div class="contact">
+          <h3> Contact Info</h3>
+          <p><i class="fas fa-map-marker-alt"></i>  No 1 St. Jude close, Odota, Ilorin, Kwara state</p> 
+           <p><i class="fas fa-phone"></i>  +2347064872678, +2348181584956</p>
+          <p><i class="fas fa-envelope"></i>  jdrcashewjuice@gmail.com</p>
+        </div>
+      </section>
+      <section class="more-info">
+        <div class="one">
+          <h1>how can we help ?</h1>
+          <p> Please select a topic below related to your inquiry. If you don’t find what you need, fill out our contact
+            form.</p>
+        </div>
+        <div class="q-two">
+          <h1>how to make purchase </h1>
+          <a href="molases.html">
+            <p>How / where to purchase our produce</p>
+          </a>
+        </div>
+        <div class="q-three">
+          <h1>What is cashew molases </h1>
+          <a href="molases.html"><p>Know exactly what the cashew molase is</p></a>
+        </div>
+        <div class="q-three">
+          <h1>Disclaimer </h1>
+          <a href="molases.html"><p>Read our Disclaimer</p></a>
+        </div>
+
+      </section>
+    </div>
+  </div>
+
+  <footer class="footer">
+    <div class="fcontainer">
+
+      <div class="one">
+        <h3>HELP AND SUPPORT</h3>
+        <p>
+          <i class="far fa-clock fa-1x"></i> Mon-Fri: 8am-5pm <br /><span class="pad">Sat: 10am-5pm</span>
+        </p><br />
+        <i class="fas fa-phone fa-1x"></i> +2347064872678<br /><span class="pad">
+          +2348181584956</span>
+      </div>
+
+      <div class="two">
+        <h3>MORE INFO</h3>
+        <ul>
+          <li><a href="index.html">Privacy Statement</a></li>
+          <li><a href="contact.html">Terms & Conditions</a></li>
+          <li><a href="#">Career</a></li>
+          <li><a href="dealer.html">Become a Dealer</a></li>
+        </ul>
+      </div>
+
+      <div class="three">
+        <h3>ST.JUDE FARMS</h3>
+        <ul>
+          <li><a href="index.html">About Us</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="safetips">Safe Buiying Tips</a></li>
+          <li><a href="#">Blog</a></li>
+        </ul>
+      </div>
+
+      <div class="social">
+        <h3>SOCIAL MEDIA</h3>
+        <p>
+          <a href="#"><i class="fab fa-facebook-square"></i> Facebook</a>
+        </p>
+        <p>
+          <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
+        </p>
+        <p>
+          <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
+        </p>
+      </div>
+    </div>
+    <P class="copy"> &copy; 2019 Copyright. St. Jude Farms. Privacy Policy. Terms Of Use. Website design and development
+      by zion System.</P>
+  </footer>
+  <script src="index.js"></script>
 </body>
+
+
+
 </html>
