--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 
           The Cashew Wine and Brandy will follow thereafter under our registered Trademark.
 
-          Our super big Banana plantain are likely ready for market later this year or early 2019.</p>
+          Our super big Banana plantain are likely ready for market later this year or early next year.</p>
 
         <p>These are long time ideas that are just now manifesting after some summersult due to the peculiar business
           environment. Plans are in place to continue to create employment for our massive youths who are ready to work.
@@ -95,15 +95,14 @@
         <p>
           <i class="far fa-clock fa-1x"></i> Mon-Fri: 8am-5pm <br /><span class="pad">Sat: 10am-5pm</span>
         </p><br />
-        <i class="fas fa-phone fa-1x"></i> +2348162511023<br /><span class="pad">
-          +2348067892221</span>
+        <i class="fas fa-phone fa-1x"></i> +2347064872678<br /><span class="pad">
+            +2348181584956</span>
       </div>
 
       <div class="two">
         <h3>MORE INFO</h3>
         <ul>
           <li><a href="index.html">Privacy Statement</a></li>
-          <li><a href="contact.html">Terms & Conditions</a></li>
           <li><a href="#">Career</a></li>
           <li><a href="dealer.html">Become a Dealer</a></li>
         </ul>
@@ -114,16 +113,15 @@
         <ul>
           <li><a href="index.html">About Us</a></li>
           <li><a href="contact.html">Contact Us</a></li>
-          <li><a href="safetips">Safe Buiying Tips</a></li>
-          <li><a href="#">Blog</a></li>
         </ul>
       </div>
 
       <div class="social">
         <h3>SOCIAL MEDIA</h3>
         <p>
-          <a href="#"><i class="fab fa-facebook-square"></i> Facebook</a>
-        </p>
+            <a href="https://web.facebook.com/JDR-Cashew-Juice-Molasé-1254427848025351" target="_blank" rel="noopener noreferrer"><i
+                class="fab fa-facebook-square"></i> Facebook</a>
+          </p>
         <p>
           <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
         </p>
