--- a/dealer.html
+++ b/dealer.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Our Value</title>
+  <title>Become a Dealer</title>
   <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
@@ -64,15 +64,14 @@
           <i class="far fa-clock fa-1x"></i> Mon-Fri: 8am-5pm <br /><span class="pad">Sat: 10am-5pm</span>
         </p>
         <br />
-        <i class="fas fa-phone fa-1x"></i> +2348162511023<br /><span class="pad">
-          +2348067892221</span>
+        <i class="fas fa-phone fa-1x"></i> +2347064872678<br /><span class="pad">
+            +2348181584956</span>
       </div>
 
       <div class="two">
         <h3>MORE INFO</h3>
         <ul>
           <li><a href="index.html">Privacy Statement</a></li>
-          <li><a href="contact.html">Terms & Conditions</a></li>
           <li><a href="#">Career</a></li>
           <li><a href="dealer.html">Become a Dealer</a></li>
         </ul>
@@ -83,16 +82,15 @@
         <ul>
           <li><a href="index.html">About Us</a></li>
           <li><a href="contact.html">Contact Us</a></li>
-          <li><a href="safetips">Safe Buiying Tips</a></li>
-          <li><a href="#">Blog</a></li>
         </ul>
       </div>
 
       <div class="social">
         <h3>SOCIAL MEDIA</h3>
         <p>
-          <a href="#"><i class="fab fa-facebook-square"></i> Facebook</a>
-        </p>
+            <a href="https://web.facebook.com/JDR-Cashew-Juice-Molasé-1254427848025351" target="_blank" rel="noopener noreferrer"><i
+                class="fab fa-facebook-square"></i> Facebook</a>
+          </p>
         <p>
           <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
         </p>
