--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
       <div>
         <div class="card-bg card-bg2">
-          <p class="on-image">cashew molases</p>
+          <p class="on-image">cashew molasé</p>
         </div>
         <p class="description">Shop our most popular cashew juice molases online or find us locally.</p>
         <a class="btn1 learn-more" href="#">Buy</a>
@@ -83,9 +83,10 @@
   <main class="main-container">
       <section class="card" data-aos="fade-up">
           <div class="text">
-            <h2>Cashew Honey Molases</h2>
+            <h2>Cashew Molasé</h2>
             <p>
-              World’s favorite kidney-shaped fruit
+              The cashew honey molasé is our first manufactured product from Kwara state
+              Nigeria. An honey substitute with great health benefits.
             </p>
             <a class="btn learn-more" href="molase.html">Learn More</a>
           </div>
@@ -97,7 +98,7 @@
       <div class="text">
         <h2>Cashew Fruit</h2>
         <p>
-          World’s favorite kidney-shaped fruit, l
+          World’s favorite kidney-shaped fruit and Africa’s most beloved cash crop — well, after cocoa, has so much health benefits
         </p>
         <a class="btn learn-more" href="fruit.html">Learn More</a>
       </div>
@@ -123,7 +124,7 @@
         </p>
         <a class="btn learn-more " href="">Coming Soon</a>
       </div>
-      <img src="./assets/banana.jpg" />
+      <img src="./assets/Plantains-2000x1180.jpg" />
     </section>
 
     <section class="card" data-aos="fade-up">
@@ -157,7 +158,6 @@
         <h3>MORE INFO</h3>
         <ul>
           <li><a href="privacy.html">Privacy Statement</a></li>
-          <!-- <li><a href="about.html/#">Terms & Conditions</a></li> -->
           <li><a href="#">Career</a></li>
           <li><a href="dealer.html">Become a Dealer</a></li>
         </ul>
@@ -168,8 +168,6 @@
         <ul>
           <li><a href="about.html">About Us</a></li>
           <li><a href="contact.html">Contact Us</a></li>
-          <!-- <li><a href="safetips">Safe Buiying Tips</a></li> -->
-          <!-- <li><a href="#">Blog</a></li> -->
         </ul>
       </div>
 
