--- a/molase.html
+++ b/molase.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Cashew Nuts</title>
+    <title>Cashew Honey Molasé</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="article.css" />
 </head>
 
 <body>
@@ -37,13 +37,68 @@
             <li><a href="dealer.html">Become a Dealer</a></li>
         </div>
     </header>
-    <div class="banner nuts-banner">
-        <p>Cashew Nuts</p>
+
+    <div class="main-container">
+        <main class="body">
+            <p id="topic">Cashew Honey Molasé</p>
+            <div class="molase-banner">
+            </div>
+            <h5>The cashew molasé</h5>
+            <p>Cashews are cash crop known for their nuts and apple, but theirs is a lot more with cashew than the apple
+                and the nuts.
+                Africa produces 57 percent of the world’s favorite kidney-shaped snack, but 90 percent of the crop is
+                exported raw and processed elsewhere, creating jobs and wealth that should be staying in Africa. Worse
+                still, something else was squandered, at least until recently — the so-called cashew apple, which was
+                thrown away or left to rot as a by-product of the harvest.</p>
+
+            <p>But when life gives you lemons, it’s time to make lemonade. Or, in this case,
+                the cashew juice honey molasé, the cashew molasé is our first manufactured product from Kwara state
+                Nigeria. We are finding a way to turn waste to wealth.
+                Previously, the apples served only as an indicator of ripeness: When they turned bright red or yellow in
+                late September and again in early January, it was time to pick the so-called nuts hanging from the
+                bottom of the apples.</p>
+
+            <p>In our processing plant, cashew apples are washed and diced before the juice is extracted by squeezing
+                the
+                chunks in a tube. Additional production steps include filtering out the tannin that make the pulp acrid,
+                heating, homogenization, pasteurization and bottling.</p>
+
+            <p>The cashew apple has a lot of health benefits, In fact, the juice helps burn fat and is good for overall
+                health, claims Festus Okunlola, a researcher with the International Institute of Tropical Agriculture in
+                Ibadan, Nigeria. “Cashew apple is a good source of magnesium, which plays a vital role in the
+                development of bones, muscles, tissues and organs,” says Okunlola. He also notes the juice contains high
+                amounts of vitamin C, low amounts of sugar and no cholesterol, which makes the product “safe for
+                diabetic patients and even lowers the risk of Type 2 diabetes.” for more on the health benefits of
+                cashew fruit check <a href="./fruit.html">here</a></p>
+
+            <h6>Adapted from from <a href="https://www.ozy.com/fast-forward/how-cashew-apple-juice-became-africas-new-power-drink/80977/">here</a><h6>
+        </main>
+        <section class="side">
+            <div class="news-header">
+                <h2>Subscribe to our newsletter</h2>
+                <p>Subscribe today and we’ll send you exclusive updates on new events, special offers and happenings at
+                    the farm!</p>
+            </div>
+            <div class="newsletter">
+                <form>
+                    <input type="text" placeholder="First Name">
+                    <input type="text" placeholder="Last Name">
+                    <input type="email" placeholder="Email">
+                    <input type="submit" value="Subcribe">
+                </form>
+            </div>
+            <div class="links">
+                <h2> Helpful Links</h2>
+                <ul>
+                    <li><a href="#">See Our Disclaimer</a></li>
+                    <li><a href="#">See Our Privacy Statement</a></li>
+                    <li><a href="#">Purchase Our Cashew Molasé</a></li>
+                    <li><a href="#">Join us on Facebook</a></li>
+
+                </ul>
+            </div>
+        </section>
     </div>
-    <main class="body">
-       
-    
-    </main>
     <footer class="footer">
         <div class="fcontainer">
             <div class="one">
@@ -52,15 +107,14 @@
                     <i class="far fa-clock fa-1x"></i> Mon-Fri: 8am-5pm <br /><span class="pad">Sat: 10am-5pm</span>
                 </p>
                 <br />
-                <i class="fas fa-phone fa-1x"></i> +2348162511023<br /><span class="pad">
-                    +2348067892221</span>
+                <p><i class="fas fa-phone fa-1x"></i> +2347064872678<br /><span class="pad">
+                        +2348181584956</span></p>
             </div>
 
             <div class="two">
                 <h3>MORE INFO</h3>
                 <ul>
-                    <li><a href="index.html">Privacy Statement</a></li>
-                    <li><a href="contact.html">Terms & Conditions</a></li>
+                    <li><a href="privacy.html">Privacy Statement</a></li>
                     <li><a href="#">Career</a></li>
                     <li><a href="dealer.html">Become a Dealer</a></li>
                 </ul>
@@ -70,23 +124,18 @@
                 <h3>ST.JUDE FARMS</h3>
                 <ul>
                     <li><a href="index.html">About Us</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
-                    <li><a href="safetips">Safe Buiying Tips</a></li>
-                    <li><a href="#">Blog</a></li>
-                </ul>
-            </div>
-
-            <div class="social">
-                <h3>SOCIAL MEDIA</h3>
-                <p>
-                    <a href="#"><i class="fab fa-facebook-square"></i> Facebook</a>
-                </p>
-                <p>
-                    <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
-                </p>
-                <p>
-                    <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
-                </p>
+                    <li><a href="contact.html">Contact Us</a></li </ul> </div> <div class="social">
+                    <h3>SOCIAL MEDIA</h3>
+                    <p>
+                        <a href="https://web.facebook.com/JDR-Cashew-Juice-Molasé-1254427848025351" target="_blank"
+                            rel="noopener noreferrer"><i class="fab fa-facebook-square"></i> Facebook</a>
+                    </p>
+                    <p>
+                        <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
+                    </p>
+                    <p>
+                        <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
+                    </p>
             </div>
         </div>
         <P class="copy">
